Fix long review overflow problem

--- a/imports/ui/css/Review.css
+++ b/imports/ui/css/Review.css
@@ -65,6 +65,5 @@
 .review {
   border-radius: 8px;
   border: solid 1px #dddddd;
-  height: 160px;
   width: 100%;
 }
